--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@ body
     font-size: 14px
     color: #fff
     background: rgb(91, 110, 138)
+    cursor: none
 *
     box-sizing: border-box
 a
@@ -20,3 +21,5 @@ input, textarea, button, select
     overflow: hidden
 @import "interface"
 @import "home"
+@import "media"
+@import "popup"
